--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   },
   "author": "Arto Arffman",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "@googleapis/iam": "^5.0.0",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^113.0.0"
+  }
 }
